src/test/deca/context/valid/method_call_sans_this.deca
// Description : test de l'appel d'une méthode sans this
//
// Résultats :
//    OK

class A {
  protected int x ;
    void setX(int x) {
    this.x = x ;
  }
  int getX() {
    return x ;
  }
  void init() {
    x = 0 ;
  }
}
class B extends A {
  int y ;
  void init() {
    setX(0) ;
    y = 0 ;
  }
}
