src/test/deca/context/invalid/test_context_incorrect_2.deca
// Description :
// on déclare les classes A,B et C des classe avec la hiérarchie C hérite de B et B hérite de A. On déclare une variable de type D et on essaie d'appeler la méthode M (de A) avec cette variable.
//
// Résultats :
// Erreur contextuelle
// Ligne 27 : M n'a pas été déclarée (Règle (0.1))


  class A {
  	void M() {
  	}
  	
  }
  
  class B extends A {
  	
  }
  
  class C extends B {
  	int y ;
}
  class D {
  }

{
	D f;
	f.M();
	}
